--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,9 +25,8 @@ steps:
     SourceFolder: '$(agent.builddirectory)'
     Contents: '**/.war'
     TargetFolder: '$(build.artifactstagingdirectory)'
-    
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(build.artifactstagingdirectory)'
-    ArtifactName: 'warfile'
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
     publishLocation: 'Container'
